# racer

./: .gitignore  CMakeLists.txt  Makefile  README.md  recomp.toml  symbols.toml
docs/: IDA_ANALYSIS_HANDOFF.md
src/: audio.cpp  main.cpp  rt64_render_context.cpp  section_table.cpp
tools/: auto_stub.py  fix_fallthroughs.py  fix_statics.py  func_differ.py  gen_lookup_table.py  identify_libultra.py  libultra_identify.py  post_recomp_patches.py  progress.py  rom_analyzer.py  string_dumper.py
